[tool.poetry]
name = "yadi"
version = "0.1.0"
description = "Yet another DSS interface"
authors = ["samtalki <saimouer@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
pandas = "^2.0.1"
numba = "^0.57.0"
"OpenDSSDirect.py" = {extras = ["extras"], version = "^0.8.2"}
h5py = "^3.8.0"
cvxpy = "^1.3.1"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
