[project]
name = "yadi"
version = "0.2.0"
description = "Research workflows for distribution network analysis on top of OpenDSSDirect.py."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Samuel Talkington", email = "talkington@pm.me" },
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "scipy>=1.13",
    "opendssdirect-py[extras]>=0.9",
    "h5py>=3.11",
    "cvxpy>=1.5",
    "seaborn>=0.13",
    "tqdm>=4.66",
    "numba>=0.60",
]

[project.optional-dependencies]
research = [
    "jax>=0.4.30",
    "jaxopt>=0.8",
    "optax>=0.2",
    "scikit-learn>=1.5",
    "cvxpylayers>=0.1.6",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "nbstripout>=0.7",
    "pre-commit>=3.8",
    "ipykernel>=6.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["yadi"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks", "yadi/experimental"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "W"]
# N801: existing public class names use DSS_* (snake_case). Renaming would break callers.
# N802/N803/N806: power-systems variable names (V, P, Q, Svp, etc.) follow domain conventions.
# E501: line length is enforced via formatter, not the linter.
ignore = ["E501", "N801", "N802", "N803", "N806"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
exclude = ["yadi/experimental", "tests", "examples", "notebooks"]

[[tool.mypy.overrides]]
module = "yadi.experimental.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
